k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickkart
  namespace: quickkart
  annotations: { nginx.ingress.kubernetes.io/rewrite-target: / }
spec:
  rules:
    - host: quickkart.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend: { service: { name: server, port: { number: 5000 } } }
          - path: /
            pathType: Prefix
            backend: { service: { name: client, port: { number: 80 } } }
